1_setup/4_kafka/client_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-client
  namespace: kafka
spec:
  containers:
    - name: kafka-client
      image: confluentinc/cp-enterprise-kafka:6.1.0
      command:
        - sh
        - -c
        - "exec tail -f /dev/null"
