1_setup/4_kafka/test_ingerss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: controlcenter2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  namespace: kafka
spec:
  rules:
    - host: controlcenter.trainer.lab.bigdata.workshop.thinkport.cloud
      http:
        paths:
          - backend:
              service:
                name: controlcenter
                port:
                  number: 9021
            path: /
            pathType: Prefix
